1.3 beta
========

(Naveed Hashmi)
- SF Patch #1181335 Fixed bug whereby system emails do not have sent dates attached to them

1.3 alpha
=========
(Dimitrios A. Koutsomitropoulos, Jozsef MARTON, Robert Tansley)
- Initial i18n support

(John Finlay)
SF Patch #1110951 - LDAP Authentication Patch

(Larry Stone)
SF Patch #1175158 - Add POST handler to HTMLServlet

(Jozsef Marton)
SF Patch #1173564 - add missing ContentType directive to some of the JSPs

(Richard Jones)
- Added new DSpace log file analysis tool, including command line analysis and
report generating tools and UI components for report display and navigation

(Richard Jones)
- "View Licence" link and copyright warning added to item display pages

(Richard Jones)
- SF patch #1149684 Group and Collection Admin bug fix. Can now change submitter
and collection admin group names (COLLECTION_XXX_SUBMITTER, COLLECTION_XXX_ADMIN)
and edit within the collection admin page

(Richard Jones)
- Addition of Tapir workspace to MyDSpace pages: authoring and supervising item
listings, a workspace for each item and a workspace item metadata viewer

(David Little)
- SF patch #1165647, 1165649-52, 1165659, 1165662, 1165664-7, 1165670 - USCD mods to support SRB and Registration

(Scott Yeadon)
- Updated handle.jar and associated license to 5.4.3

(Richard Jones)
- Addition of supervision order setting tools for administration area, to allow
user accounts to observe or collaborate on unfinished submission

(Robert Tansley)
- OAI-PMH set names now XML-encoded (e.g. &, <, >) (Collection names with such
characters previously caused bad XML in OAI-PMH ListSets responses)


1.2.2 beta 2
============

(Robert Tansley)
- Fixed bug whereby 'Submit to this Collection' button only appears if admin.

(Larry Stone)
- SF patch #1143570 Fix various bugs handling slash ("/") in bitstream names

(Scott Phillips & David Little)
- Patch for SF bug #1145527 Able to delete 'unknown' bitstream format

(Mike Simpson)